# wut_velma_effort_controller

./: CMakeLists.txt  package.xml  plugins.xml
include/wut_velma_effort_controller/: cart_torque_controller.hpp  cartesian_impedance.hpp  cartesian_trajectory_generator.hpp  joint_impedance.hpp  self_collision_detector.hpp  test_chainable_controller.hpp  wut_velma_effort_controller.hpp  wut_velma_model.hpp  wut_velma_types.hpp
src/: cart_torque_controller.cpp  cartesian_impedance.cpp  cartesian_trajectory_generator.cpp  joint_impedance.cpp  self_collision_detector.cpp  test_chainable_controller.cpp  wut_velma_effort_controller.cpp  wut_velma_model.cpp
